bundled_metadata/force-app/main/default/objects/Route_Sales_Geo__c/Route_Sales_Geo__c.object-meta.xml
<CustomObject>
    <label>Route Sales Geo</label>
    <nameField>
        <label>Route Sales Geo Name</label>
        <length>255</length>
        <type>Text</type>
    </nameField>
    <pluralLabel>Route Sales Geos</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>