bundled_metadata/force-app/main/default/objects/Route_Sales_Geo__c/fields/CurrencyISOCode__c.field-meta.xml
<CustomField>
    <fullName>CurrencyISOCode__c</fullName>
    <label>Currency Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CurrencyISOCodes</valueSetName>
    </valueSet>
</CustomField>