bundled_metadata/force-app/main/default/objects/Route_Sales_Geo__c/fields/Division__c.field-meta.xml
<CustomField>
    <fullName>Division__c</fullName>
    <label>Division</label>
    <length>100</length>
    <type>Text</type>
</CustomField>