bundled_metadata/force-app/main/default/objects/Route_Sales_Geo__c/fields/ExtID__c.field-meta.xml
<CustomField>
    <fullName>ExtID__c</fullName>
    <externalId>true</externalId>
    <label>External Id</label>
    <length>40</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>