bundled_metadata/force-app/main/default/objects/Route_Sales_Geo__c/fields/GPSLocation__c.field-meta.xml
<CustomField>
    <fullName>GPSLocation__c</fullName>
    <label>GPSLocation</label>
    <scale>2</scale>
    <type>Location</type>
</CustomField>