bundled_metadata/force-app/main/default/objects/Route_Sales_Geo__c/fields/Hierarchy_Level__c.field-meta.xml
<CustomField>
    <fullName>Hierarchy_Level__c</fullName>
    <description>Specifies the hierarchy level values in the Route Sales Geo Hierarchy (Route, Territory, Area, etc.)</description>
    <label>Hierarchy Level</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Hierarchy_Level_Code__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Sector</fullName>
            </value>
            <value>
                <fullName>Cluster</fullName>
            </value>
            <value>
                <fullName>Sales Business Org</fullName>
            </value>
            <value>
                <fullName>GTM Model</fullName>
            </value>
            <value>
                <fullName>Division</fullName>
            </value>
            <value>
                <fullName>Region</fullName>
            </value>
            <value>
                <fullName>Market</fullName>
            </value>
            <value>
                <fullName>Zone</fullName>
            </value>
            <value>
                <fullName>Territory</fullName>
            </value>
            <value>
                <fullName>District</fullName>
            </value>
            <value>
                <fullName>Route</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>