bundled_metadata/force-app/main/default/objects/Route_Sales_Geo__c/fields/Hierarchy_Level_Code__c.field-meta.xml
<CustomField>
    <fullName>Hierarchy_Level_Code__c</fullName>
    <description>Specifies the hierarchy level in the Route Sales Geo Hierarchy (L1, L2, L3)</description>
    <label>Hierarchy Level Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>L1</fullName>
            </value>
            <value>
                <fullName>L2</fullName>
            </value>
            <value>
                <fullName>L3</fullName>
            </value>
            <value>
                <fullName>L4</fullName>
            </value>
            <value>
                <fullName>L5</fullName>
            </value>
            <value>
                <fullName>L6</fullName>
            </value>
            <value>
                <fullName>L6.5</fullName>
            </value>
            <value>
                <fullName>L7</fullName>
            </value>
            <value>
                <fullName>L7.5</fullName>
            </value>
            <value>
                <fullName>L8</fullName>
            </value>
            <value>
                <fullName>L9</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>