bundled_metadata/force-app/main/default/objects/Route_Sales_Geo__c/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Specifies whether the route is active based on start and end dates, if date&apos;s are not populated, default to false</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>