bundled_metadata/force-app/main/default/objects/Route_Sales_Geo__c/fields/KPI_G_01_Actual__c.field-meta.xml
<CustomField>
    <fullName>KPI_G_01_Actual__c</fullName>
    <label>Active Customers</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>