bundled_metadata/force-app/main/default/objects/Route_Sales_Geo__c/fields/KPI_Last_Sync__c.field-meta.xml
<CustomField>
    <fullName>KPI_Last_Sync__c</fullName>
    <label>KPIs Last Updated</label>
    <type>DateTime</type>
</CustomField>