bundled_metadata/force-app/main/default/objects/Route_Sales_Geo__c/fields/KPI_S_06_Actual__c.field-meta.xml
<CustomField>
    <fullName>KPI_S_06_Actual__c</fullName>
    <label>Net Sales MTD by Manufacturer</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>