bundled_metadata/force-app/main/default/objects/Route_Sales_Geo__c/fields/Local_Route_ID__c.field-meta.xml
<CustomField>
    <fullName>Local_Route_ID__c</fullName>
    <description>Identifies the route as it is known in the Source System</description>
    <label>Local Route Identifier</label>
    <length>40</length>
    <type>Text</type>
</CustomField>