bundled_metadata/force-app/main/default/objects/Route_Sales_Geo__c/fields/Parent_Node__c.field-meta.xml
<CustomField>
    <fullName>Parent_Node__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Id of the territory or L2 that the route rolls up to</description>
    <label>Parent Node</label>
    <referenceTo>Route_Sales_Geo__c</referenceTo>
    <relationshipLabel>Route Sales Geos</relationshipLabel>
    <relationshipName>Parent_Nodes</relationshipName>
    <type>Lookup</type>
</CustomField>