bundled_metadata/force-app/main/default/objects/Route_Sales_Geo__c/fields/Route_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Route_End_Date__c</fullName>
    <description>The date until which the route is valid.  The date after which the route become inactive.</description>
    <label>Route End Date</label>
    <type>DateTime</type>
</CustomField>