bundled_metadata/force-app/main/default/objects/Route_Sales_Geo__c/fields/Route_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Route_Start_Date__c</fullName>
    <description>The date on which the route became active.</description>
    <label>Route Start Date</label>
    <type>DateTime</type>
</CustomField>