bundled_metadata/force-app/main/default/objects/Route_Sales_Geo__c/fields/Route_Type_Code_Value__c.field-meta.xml
<CustomField>
    <fullName>Route_Type_Code_Value__c</fullName>
    <description>Specifies the type in which the route is located.</description>
    <label>Route Type Code Value</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>TBD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>