bundled_metadata/force-app/main/default/objects/Route_Sales_Geo__c/fields/Route_Type_Name__c.field-meta.xml
<CustomField>
    <fullName>Route_Type_Name__c</fullName>
    <description>Describe the type name where the route is located</description>
    <label>Route Type Name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>TBD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>