bundled_metadata/force-app/main/default/objects/Route_Sales_Geo__c/fields/S_09_Target__c.field-meta.xml
<CustomField>
    <fullName>S_09_Target__c</fullName>
    <label>Net Sales QTD by Product</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>