bundled_metadata/force-app/main/default/objects/Route_Sales_Geo__c/fields/Sales_Unit_Active_Flag_Value__c.field-meta.xml
<CustomField>
    <fullName>Sales_Unit_Active_Flag_Value__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sales Unit Active Flag Value</label>
    <type>Checkbox</type>
</CustomField>