bundled_metadata/force-app/main/default/objects/Route_Sales_Geo__c/fields/Sales_Unit_GTM_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Sales_Unit_GTM_End_Date__c</fullName>
    <label>Sales Unit Go To Market End Date</label>
    <type>DateTime</type>
</CustomField>