bundled_metadata/force-app/main/default/objects/Route_Sales_Geo__c/fields/Sales_Unit_Name__c.field-meta.xml
<CustomField>
    <fullName>Sales_Unit_Name__c</fullName>
    <label>Sales Unit Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>