bundled_metadata/force-app/main/default/objects/Route_Sales_Geo__c/fields/Unique_ID__c.field-meta.xml
<CustomField>
    <fullName>Unique_ID__c</fullName>
    <description>Additional external Id field</description>
    <externalId>true</externalId>
    <label>Unique ID Value</label>
    <length>40</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>