bundled_metadata/force-app/main/default/objects/Route_Sales_Geo__c/fields/Zone__c.field-meta.xml
<CustomField>
    <fullName>Zone__c</fullName>
    <label>Zone</label>
    <length>100</length>
    <type>Text</type>
</CustomField>