bundled_metadata/force-app/main/default/objects/Route_Sales_Geo__c/recordTypes/Sales_Unit.recordType-meta.xml
<RecordType>
    <fullName>Sales_Unit</fullName>
    <active>true</active>
    <label>Sales Unit</label>
</RecordType>