bundled_metadata/force-app/main/default/objects/Route_Sales_Geo__c/validationRules/Route_End_Date_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Route_End_Date_Validation</fullName>
    <active>true</active>
    <description>Enforces valid to date to be after valid from date</description>
    <errorConditionFormula>Route_End_Date__c &lt;  Route_Start_Date__c</errorConditionFormula>
    <errorMessage>Route End Date must be after Route Start Date</errorMessage>
</ValidationRule>